src/ui/snapshots/starfold__ui__frames__create-directory-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, w, h)"
---
╔═ S T A R / F O L D ══════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────║
║    ▸ empty/                               -  Sep 10      ║
║    ▸ pictures/                            -  Sep 10      ║
║    ▸ projects/                            -  Sep 10      ║
║›   ◇ blob.bin                         256 B  Sep 10      ║
║    ↗ dangling                           7 B  Sep 10      ║
║ ╔═ NEW DIRECTORY ══════════════════════════════════════╗ ║
║ ║                                                      ║ ║
║ ║                                                      ║ ║
╚═╚═══════════════════════════ enter create · esc cancel ╝═╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════╗
║                                                    close ║
║ Type: application/octet-stream                           █
╚══════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════╗
║                                                   remove ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p   ~  off
