src/ui/snapshots/starfold__ui__frames__directory-tree-commander-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D — › LEFT ═══════ commander ═╗╔═ RIGHT ════════════════════════════ commander ═╗
║  sort  filter  Bookmark  places  view  actions ║║  sort  filter  Bookmark  places  view  actions ║
║─ ~ ────────────────────────────────────────────║║─ ~ ────────────────────────────────────────────║
║    ▸ empty/                                   -║║    ▸ empty/                                   -║
║    ▸ pictures/                                -║║    ▸ pictures/                                -║
║    ▸ projects/                                -║║    ▸ projects/                                -║
║    ◇ blob.bin                             256 B║║    ◇ blob.bin                             256 B║
║    ↗ dangling                               7 B║║    ↗ dangling                               7 B║
║    ↗ notes.txt                             27 B║║    ↗ notes.txt                             27 B║
║                                                ║║                                                ║
║                                                ║║                                                ║
╚════════════════════════════════════════════════╝╚════════════════════════════════════════════════╝
╔═ PREVIEW — ▸ projects ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                    Tree · 4 files · 3 dirs shown ║
║ └── ▸ starwire/                                                                                  ║
║     ├── ▸ src/                                                                                   ║
║     │   └── λ main.rs                                                                            ║
║     ├── ▸ target/                                                                                ║
║     ├── ◇ .gitignore                                                                             ║
║     ├── λ Cargo.toml                                                                             ║
║     └── ≡ README.md                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  j/k scroll  i fold  z scale                                                           ~  off
