src/ui/snapshots/starfold__ui__frames__directory-tree-commander-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 21)"
---
╔═ S T A R / F O L D › LEFT ═╗╔═ RIGHT ════════ commander ═╗
║      places  view  actions ║║      places  view  actions ║
║─ ~ ────────────────────────║║─ ~ ────────────────────────║
║    ▸ empty/                ║║    ▸ empty/                ║
║    ▸ pictures/             ║║    ▸ pictures/             ║
║    ▸ projects/             ║║    ▸ projects/             ║
║    ◇ blob.bin              ║║    ◇ blob.bin              ║
║    ↗ dangling              ║║    ↗ dangling              ║
║    ↗ notes.txt             ║║    ↗ notes.txt             ║
║                            ║║                            ║
║                            ║║                            ║
╚════════════════════════════╝╚════════════════════════════╝
╔═ PREVIEW — ▸ projects ═══════════════════════════════════╗
║                                                    close ║
║ └── ▸ starwire/                                          █
╚══════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════╗
║                                                   remove ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  j/k scroll  i fold  z scale                   ~  off
