src/ui/snapshots/starfold__ui__frames__directory-tree-fold-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────────────────────────────────────────────║
║    ▸ empty/                                                       dir             -  Sep 10      ║
║    ▸ pictures/                                                    dir             -  Sep 10      ║
║    ▸ projects/                                                    dir             -  Sep 10      ║
║    ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║    ↗ dangling                                                     link          7 B  Sep 10      ║
║    ↗ notes.txt                                                    link         27 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ▸ projects ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                    Tree · 4 files · 3 dirs shown ║
║ └── ▸ starwire/                                                                                  ║
║     ├── ▸ src/                                                                                   ║
║     │   └── λ main.rs                                                                            ║
║     ├── ▸ target/                                                                                ║
║     ├── ◇ .gitignore                                                                             ║
║     ├── λ Cargo.toml                                                                             ║
║     └── ≡ README.md                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  j/k scroll  i fold  z scale                                                           ~  off
