src/ui/snapshots/starfold__ui__frames__file-menu-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, w, h)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─╔═ FILE ACTIONS ═════════╗90 B ──────────────────────────────────────────────────────────────────║
║ ║Open                    ║                                        dir             -  Sep 10      ║
║ ║Preview                 ║                                        dir             -  Sep 10      ║
║ ║Mark / unmark           ║                                        dir             -  Sep 10      ║
║›║Copy…                   ║                                        bin         256 B  Sep 10      ║
║ ║Copy current path       ║                                        link          7 B  Sep 10      ║
║ ║Move…                   ║                                        link         27 B  Sep 10      ║
║ ║Rename…                 ║                                                                       ║
║ ║New file…               ║                                                                       ║
║ ║New directory…          ║                                                                       ║
║ ║Delete (queue)          ║                                                                       ║
║ ║Compress…               ║                                                                       ║
║ ╚════════════════════════╝                                                                       ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                    File metadata ║
║ Type: application/octet-stream                                                                   ║
║ Size: 256 B                                                                                      ║
║ Permissions: -rw-r--r--                                                                          ║
║ Modified: 2026-09-10T12:00:00Z                                                                   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delete                   ~  off
