src/ui/snapshots/starfold__ui__frames__file-menu-60x21.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, w, h)"
---
╔═ S T A R / F O L D ══════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─╔═ FILE ACTIONS ═════════╗90 B ──────────────────────────║
║ ║Open                    ║                -  Sep 10      ║
║ ║Preview                 ║                -  Sep 10      ║
║ ║Mark / unmark           ║                -  Sep 10      ║
║ ║Copy…                   ║            256 B  Sep 10      ║
║ ║Copy current path       ║              7 B  Sep 10      ║
║ ║Move…                   ║             27 B  Sep 10      ║
║ ║Rename…                 ║                               ║
║ ║New file…               ║                               ║
╚═║New directory…          ║═══════════════════════════════╝
╔═║Delete (queue)          ║═══════════════════════════════╗
║ ║Compress…               ║                         close ║
║ ╚════════════════════════╝ream                           █
╚══════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════╗
║                                               run  clear ║
║                      nothing queued                      ║
╚══════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p   ~  off
